# embassy-ht32f523xx

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Embed.toml  IMPLEMENTATION_PROGRESS.md  README.md  SPEC.md  VALIDATION_REPORT.md  build.rs  deps_init.sh  memory.x  memory_ht32f52342.x  memory_ht32f52352.x  shell.nix  todolis.md  todolist.md
.claude/: settings.local.json
bsp/: Cargo.toml
bsp/src/: esk32_30501.rs  lib.rs
embassy-ht32/: Cargo.toml
embassy-ht32/src/: lib.rs  uart.rs  usb.rs
examples/blink/: Cargo.toml  Makefile.toml  build.rs
examples/blink-embassy/: Cargo.toml  Makefile.toml
examples/blink-embassy/src/: main.rs
examples/blink/.cargo/: config.toml
examples/blink/src/: main.rs
examples/ht32-rmk-60key/: Embed.toml  Makefile.toml  build.rs  vial.json
examples/ht32-rmk-60key/src/: keymap.rs  main.rs
examples/rmk-keyboard-ap2/ht32-rmk-60key/: Cargo.toml  README.md  build.rs  memory_minimal.x
examples/rmk-keyboard-ap2/ht32-rmk-60key/src/: keymap.rs  macros.rs  main.rs  vial.rs
examples/serial-echo/: Cargo.toml  build.rs
examples/serial-echo/src/: main.rs
examples/time_driver_simple_test/: Cargo.toml
examples/time_driver_simple_test/src/: main.rs
examples/usb-hid-keyboard/: Cargo.toml  Makefile.toml  build.rs
examples/usb-hid-keyboard/src/: main.rs
examples/usb-rtt-test/: Cargo.toml  build.rs
examples/usb-rtt-test/src/: main.rs
ht32-hal/: Cargo.toml
ht32-hal/src/: gpio.rs  lib.rs  rcc.rs  time.rs  timer.rs  uart.rs
openspec/: project.md
openspec/changes/enhance-time-driver/: READY_FOR_ARCHIVE.md  design.md  final_validation_report.md  proposal.md  tasks.md  tasks_updated.md
openspec/changes/enhance-time-driver/specs/timer/: spec.md
openspec/changes/implement-embassy-async/: design.md  proposal.md  tasks.md
openspec/changes/implement-embassy-async/specs/async-executor/: interrupt_strategy_explanation.md  spec.md  update_notes.md
openspec/changes/implement-embassy-async/specs/critical-section/: spec.md  update_notes.md
openspec/changes/implement-embassy-async/specs/peripherals/: spec.md  update_notes.md
openspec/changes/implement-embassy-async/specs/time-driver/: spec.md  update_notes.md
openspec/changes/implement-embassy-usb-driver/: proposal.md  tasks.md
openspec/changes/implement-embassy-usb-driver/specs/usb-driver/: spec.md
src/: exti.rs  flash.rs  fmt.rs  gpio.rs  interrupt.rs  lib.rs  rcc.rs  time.rs  time_driver.rs  time_driver_backup.rs  time_driver_enhanced.rs  time_driver_enhanced_backup.rs  timer.rs  uart.rs  usb.rs
src/chip/: ht32f52342.rs  ht32f52352.rs  mod.rs
src/time/: SIMPLE_TIME.md  bftm.rs  clocks.rs
tests/: time_driver_tests.rs
tests/async_gpio_test/: Cargo.toml
tests/async_gpio_test/src/: main.rs
tests/executor_interrupt_test/: Cargo.toml
tests/executor_interrupt_test/src/: main.rs
tests/test_critical_section/: Cargo.toml  build.rs
tests/test_critical_section/.cargo/: config.toml
tests/test_critical_section/src/: main.rs
tests/time_driver_simple_test/: Cargo.toml  build.rs
tests/time_driver_simple_test/src/: main.rs
tests/timer_precision_test/: Cargo.toml  build.rs
tests/timer_precision_test/src/: main.rs
tests/usb_basic_check/: Cargo.toml  build.rs  memory_ht32f52352.x
tests/usb_basic_check/src/: main.rs
tests/usb_enumeration_test/: Cargo.toml  build.rs
tests/usb_enumeration_test/src/: main.rs
tests/usb_nvic_interrupt_test/: Cargo.toml
tests/usb_nvic_interrupt_test/src/: main.rs
tests/usb_task_2_1_basic_methods/: Cargo.toml
tests/usb_task_2_1_basic_methods/src/: main.rs
tests/usb_task_2_2_buffer_io/: Cargo.toml  build.rs
tests/usb_task_2_2_buffer_io/src/: main.rs
tests/usb_task_2_3_poll_handler/: Cargo.toml
tests/usb_task_2_3_poll_handler/src/: main.rs
tests/usb_task_4_2_serial_communication/: Cargo.toml  build.rs
tests/usb_task_4_2_serial_communication/src/: main.rs
