[workspace]
members = [
    "bsp",
    "examples/blink",
    "examples/serial-echo",
    "examples/usb-hid-keyboard",
    "examples/usb-rtt-test",
    "examples/usb-serial-test",
    "examples/ht32-rmk-60key",
    "tests/time_driver_simple_test",
    "tests/executor_interrupt_test",
    "tests/test_critical_section",
    "tests/timer_precision_test",
    "tests/async_gpio_test",
    "tests/usb_enumeration_test",
    "tests/usb_task_2_1_basic_methods",
    "tests/usb_task_2_2_buffer_io",
    "tests/usb_task_2_3_poll_handler",
    "tests/usb_task_4_2_serial_communication",
    "tests/usb_basic_check",
    "tests/usb_nvic_interrupt_test",
]
resolver = "2"

[package]
name = "embassy-ht32f523xx"
version = "0.1.0"
edition = "2024"
authors = ["hitsmaxft <mfthits@gmail.com>"]
description = "Embassy async runtime and HAL for HT32F523xx microcontrollers"
license = "MIT OR Apache-2.0"

[features]
default = ["ht32f52352"]
# Chip variants
ht32f52342 = []
ht32f52352 = []
# Runtime support
rt = ["ht32f523x2/rt", "cortex-m-rt"]
# Embassy executor support
executor = ["embassy-executor/arch-cortex-m", "embassy-executor/executor-interrupt", "embassy-executor/executor-thread"]
# Peripheral features
usb = ["rt"]
# Debugging support
defmt = ["dep:defmt", "dep:defmt-rtt"]

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", optional = true }
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-nb = "1.0"
nb = "1.0"
#ht32f523x2 = { path = "deps/ht32f523x2" }
# ht32f523x2 = "0.5"
ht32f523x2 = { git = "https://github.com/hitsmaxft/ht32f523x2.git" }
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
embassy-time-driver = "0.2.1"
embassy-time-queue-utils = "0.3.0"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
embassy-usb = "0.5.0"
embassy-usb-driver = "0.2.0"
embedded-storage = "0.3.1"
#embedded-storage-async = "0.4.1"
critical-section = "1.0"

# Development and debugging
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

[workspace.dependencies]
embassy-ht32f523xx = { path = ".", default-features = false }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-hal-nb = "1.0"
nb = "1.0"
#ht32f523x2 = { path = "deps/ht32f523x2" }
ht32f523x2 = { git = "https://github.com/hitsmaxft/ht32f523x2.git" }
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
embassy-time-driver = "0.2.1"
embassy-time-queue-utils = "0.3.0"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
embassy-usb = "0.5.0"
embassy-usb-driver = "0.2.0"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
critical-section = "1.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3"
usbd-hid = "0.8"

[profile.dev]
debug = 2
lto = false

[profile.release]
debug = 2
lto = true
opt-level = "s"
