[package]
name = "ht32-bsp"
version = "0.1.0"
edition = "2024"
authors = ["hitsmaxft <mfthits@gmail.com>"]
description = "Board Support Package for HT32F523xx development boards"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { workspace = true }
embedded-hal = { workspace = true }
embassy-ht32f523xx = { workspace = true }
ht32f523x2 = { workspace = true }
defmt = { version = "0.3", optional = true }

[features]
default = ["esk32-30501"]
esk32-30501 = []
rt = ["ht32f523x2/rt"]
defmt = ["dep:defmt", "embassy-ht32f523xx/defmt"]