[package]
name = "ht32-hal"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Hardware Abstraction Layer for HT32F523xx microcontrollers"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true }
embedded-hal-nb = { workspace = true }
nb = { workspace = true }
ht32f523x2 = { workspace = true }

[features]
default = []
rt = ["ht32f523x2/rt"]