[package]
name = "blink"
version = "0.1.0"
edition = "2024"
authors = ["hitsmaxft <mfthits@gmail.com>"]

[[bin]]
name = "blink"
path = "src/main.rs"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { workspace = true, features = ["generic-queue-8"] }
panic-halt = "1.0"
embedded-hal = { workspace = true }

embassy-ht32f523xx = { workspace = true, features = ["rt", "ht32f52352"] }
ht32-bsp = { path = "../../bsp", features = ["rt"] }

# Build dependencies for cargo-binutils (needed for objcopy)
[build-dependencies]
cargo-binutils = "0.3"
