[package]
name = "usb-hid-keyboard"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[[bin]]
name = "keyboard"
path = "src/main.rs"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { workspace = true, features = ["defmt"] }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
embedded-hal = { workspace = true }
usbd-hid = { workspace = true }

ht32-hal = { path = "../../ht32-hal", features = ["rt"] }
ht32-bsp = { path = "../../bsp", features = ["rt"] }
embassy-ht32 = { path = "../../embassy-ht32", features = ["rt", "usb"] }