[package]
name = "usb-hid-keyboard"
version = "0.1.0"
edition = "2024"
authors = ["hitsmaxft <mfthits@gmail.com>"]

[[bin]]
name = "keyboard"
path = "src/main.rs"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { workspace = true, features = ["defmt", "defmt-timestamp-uptime"] }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
embedded-hal = { workspace = true }

embassy-ht32f523xx = { workspace = true, features = ["rt", "usb", "ht32f52352"] }
ht32-bsp = { path = "../../bsp", features = ["rt"] }

# USB dependencies
embassy-usb = { workspace = true }
embassy-usb-driver = { workspace = true }
embassy-futures = { workspace = true }
static_cell = "2"
portable-atomic = { version = "1.0", features = ["critical-section"] }
critical-section = { workspace = true }
usbd-hid = "0.8"