[package]
name = "usb_basic_check"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "usb_basic_check"
path = "src/main.rs"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-interrupt", "defmt"] }
embassy-time = { workspace = true, features = ["defmt"] }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
embassy-ht32f523xx = { workspace = true, features = ["rt", "usb", "ht32f52352"] }
ht32-bsp = { path = "../../bsp", features = ["rt"] }