[package]
name = "usb_nvic_interrupt_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "usb_nvic_test"
path = "src/main.rs"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-interrupt", "defmt"] }
embassy-time = { workspace = true, features = ["defmt"] }
embassy-usb = { workspace = true }
embassy-futures = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
embassy-ht32f523xx = { workspace = true, features = ["rt", "usb", "ht32f52352"] }
ht32-bsp = { path = "../../bsp", features = ["rt"] }