[workspace]

[package]
name = "rmk-ht32-60key"
version = "0.1.0"
authors = ["hitsmaxft <mfthits@gmail.com>"]
description = "60-key mechanical keyboard firmware for HT32F523xx using RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.7.8", features = ["async_matrix", "col2row"] }
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.5"
embassy-ht32 = { path = "../../../embassy-ht32", features = ["rt", "usb"] }
ht32-hal = { path = "../../../ht32-hal" }
ht32f523x2 = "0.5"
static_cell = "2"
portable-atomic = { version = "1.0", features = ["critical-section"] }
defmt = "1.0"
defmt-rtt = "1.0"
embedded-storage = "0.3.1"
embedded-hal = "1.0"
critical-section = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }


[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }
embassy-usb-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "03a16011f63c11c97ded10f7e6b872db81280a23" }


[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-ht32-60key"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = true
opt-level = "z"
overflow-checks = false
lto = "fat"
