[package]
name = "rmk-ht32-60key"
version = "0.1.0"
authors = ["hitsmaxft <mfthits@gmail.com>"]
description = "60-key mechanical keyboard firmware for HT32F523xx using RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { git = "https://github.com/haobogu/rmk", features = ["async_matrix", "col2row"] }
cortex-m = { workspace = true, features = ['critical-section-single-core'] }
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { workspace = true }
embassy-ht32f523xx = { workspace = true, features = ["rt", "usb", "ht32f52342"] }
ht32f523x2 = { workspace = true }
static_cell = "2"
portable-atomic = { version = "1.0", features = ["critical-section"] }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embedded-storage = "0.3.1"
embedded-hal = { workspace = true }
critical-section = { workspace = true }
panic-probe = { version = "1.0", features = ["print-defmt"] }




[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-ht32-60key"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = true
opt-level = "z"
overflow-checks = false
lto = "fat"
