[package]
name = "rmk-ht32-60key"
version = "0.1.0"
authors = ["hitsmaxft <mfthits@gmail.com>"]
description = "60-key mechanical keyboard firmware for HT32F523xx using RMK"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# RMK configuration for HT32F52352 with 16KB RAM - with vial support
rmk = { git = "https://github.com/haobogu/rmk", default-features = false, features = ["async_matrix", "storage", "vial"] }
rmk-types = { git = "https://github.com/haobogu/rmk", default-features = false }
cortex-m = { workspace = true, features = ['critical-section-single-core'] }
cortex-m-rt = { workspace = true }
# Minimal embassy features - remove defmt to save memory
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { workspace = true }
embassy-ht32f523xx = { workspace = true, features = ["rt", "usb", "ht32f52352"] }
ht32f523x2 = { workspace = true }
static_cell = "2"
portable-atomic = { version = "1.0", features = ["critical-section"] }
# Remove defmt to save significant memory
# defmt = { workspace = true }
# defmt-rtt = { workspace = true }
embedded-storage = "0.3.1"
embedded-hal = { workspace = true }
critical-section = { workspace = true }
# Use panic-halt instead of panic-probe to save memory
panic-halt = "1.0"


[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-ht32-60key"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = false
opt-level = "z"
overflow-checks = false
lto = "thin"
panic = 'abort'

[profile.release]
codegen-units = 1
debug = false
opt-level = "z"
overflow-checks = false
lto = "fat"
panic = 'abort'
